<resources>
    <string name="app_name">LinearLayout Projects</string>
    <string name="alliance_ai">Alliance.ai</string>
    <string name="powered_by_ediwesly">Powered by Ediwesly</string>
    <string name="hello_shrivatsa_r_joshi">Hello, SHRIVATSA R JOSHI</string>
    <string name="physics_cycle_section_a">Physics Cycle | Section A</string>
    <string name="todo">TODO</string>
    <string name="hello">Hello</string>
    <string name="content">CONTENT</string>
    <string name="pay">Pay</string>
    <string name="fresh">Fresh</string>
    <string name="mx_player">MX PLayer</string>
    <string name="medical">Medical</string>
    <string name="body">BODY</string>
    <string name="todo1">TODO</string>
    <string name="deliver_to_xyz_banglore_590059">Deliver to XYZ - Banglore 590059</string>
    <string name="home">Home</string>
    <string name="you">You</string>
    <string name="wallet">Wallet</string>
    <string name="cart">Cart</string>
    <string name="menu">Menu</string>
    <string name="rufus">Rufus</string>
    <string name="blinkit_in">Blinkit in</string>
    <string name="_18_minutes">18 Minutes</string>
    <string name="home_xyz">Home - XYZ</string>
    <string name="tod2">TODO</string>
    <string name="all">ALl</string>
    <string name="electronics">Electronics</string>
    <string name="beauty">Beauty</string>
    <string name="decor">Decor</string>
    <string name="kids">Kids</string>
    <string name="body1">BODY</string>
    <string name="home1">Home</string>
    <string name="order_again">Order again</string>
    <string name="catergories">Catergories</string>
    <string name="print">Print</string>
    <string name="zomato">zomato</string>
    <string name="facebook">facebook</string>
    <string name="hij">-</string>
    <string name="hello1">-</string>
    <string name="hello2">-</string>
    <string name="hello3">-</string>
    <string name="hello4">-</string>
    <string name="hello5">-</string>
    <string name="hello6">-</string>
    <string name="hello7">-</string>
    <string name="user_image">user_image</string>
    <string name="stories">Stories</string>
    <string name="body8">Body</string>
</resources>