<!--This is a model  of blinkit-->


<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:layout_weight="10"
        android:background="#FFE49D"
        android:orientation="vertical"
        android:weightSum="100"
        tools:ignore="ExtraText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8"
            android:paddingStart="8dp"
            android:paddingTop="9sp"
            android:text="@string/blinkit_in"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="8sp"
            android:text="@string/_18_minutes"
            android:textColor="@color/black"
            android:textSize="21sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="8sp"
            android:text="@string/home_xyz"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/tod2"
            android:src="@drawable/search__background"
            tools:ignore="ContentDescription" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/electronics"
                android:textSize="12sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/beauty"
                android:textSize="12sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/decor"
                android:textSize="12sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/kids"
                android:textSize="12sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="80"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#808080"
        android:weightSum="100" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body1"
            android:layout_gravity="center"
            android:textSize="78"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="10"
        android:weightSum="100">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:text="@string/home1" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:text="@string/order_again" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:text="@string/catergories" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:text="@string/print" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:text="@string/zomato" />


    </LinearLayout>






</LinearLayout>