<!--This is the model of alliance.ai-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="100"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5C65FF"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/alliance_ai"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powered_by_ediwesly"
            android:textColor="@color/white"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/hello_shrivatsa_r_joshi"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/physics_cycle_section_a"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/search__background"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:background="#808080"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/content"
            android:textColor="#000000"
            android:textSize="50sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/hello" />

    </LinearLayout>

        
        

</LinearLayout>

